--- a/app/src/main/res/layout/tab3all.xml
+++ b/app/src/main/res/layout/tab3all.xml
@@ -5,10 +5,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.stas.dictionary.MainActivity">
 
-    <ListView
-        android:id="@+id/allListView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="match_parent"
+        android:id="@+id/scroll">
+        <LinearLayout
+            android:id="@+id/tab3mainLinLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
