--- a/app/src/main/res/layout/words_per_day.xml
+++ b/app/src/main/res/layout/words_per_day.xml
@@ -5,20 +5,19 @@
     android:layout_height="50dp"
     android:layout_marginTop="10dp">
     <TextView
-        android:id="@+id/tvPosition"
+        android:id="@+id/tvWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="tvWord"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="5dp">
+        android:layout_marginStart="5dp">
     </TextView>
     <ImageView
-        android:id="@+id/tvSalary"
+        android:id="@+id/tvEditImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_gravity="center_vertical|right"
-        android:layout_marginRight="5dp"
+        android:layout_gravity="center_vertical|end"
+        android:layout_marginEnd="5dp"
         android:src="@android:drawable/ic_menu_edit">
     </ImageView>
 </FrameLayout>
