--- a/app/src/main/res/layout/activity_words_set.xml
+++ b/app/src/main/res/layout/activity_words_set.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.stas.dictionary.Activities.WordsSetActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -18,8 +20,5 @@
         android:id="@+id/lvWordsSet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
     </ListView>
-
-
 </LinearLayout>
