--- a/app/src/main/res/layout/activity_words_set.xml
+++ b/app/src/main/res/layout/activity_words_set.xml
@@ -9,16 +9,21 @@
     <TextView
         android:id="@+id/tvWordsSetName"
         android:layout_width="fill_parent"
-        android:layout_height="20dp"
+        android:layout_height="40dp"
         android:textAlignment="center"
-        android:text="Set1"
-        android:textSize="15dp"
+        android:textSize="20sp"
+        android:textColor="@color/colorRecent"
         android:background="@color/colorPrimaryDark">
     </TextView>
 
     <ListView
+        android:background="@drawable/background_with_shadow_white_background"
         android:id="@+id/lvWordsSet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:dividerHeight="5.0sp">
     </ListView>
 </LinearLayout>
