--- a/app/src/main/res/layout/words_set_item.xml
+++ b/app/src/main/res/layout/words_set_item.xml
@@ -1,22 +1,23 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:layout_marginTop="10dp">
+    android:layout_height="50dp"
+ >
     <TextView
         android:id="@+id/tvWordSetItem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="tvWord"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="5dp">
+        android:textSize="20sp"
+        android:text="TEST"
+        android:layout_marginStart="20dp">
     </TextView>
     <ImageView
         android:id="@+id/tvWordSetItemDelete"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="center_vertical|end"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="20dp"
         android:src="@android:drawable/ic_delete">
     </ImageView>
 </FrameLayout>
