--- a/app/src/main/res/layout/tab1favorites.xml
+++ b/app/src/main/res/layout/tab1favorites.xml
@@ -1,15 +1,23 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+<android.support.design.widget.CoordinatorLayout
+android:id="@+id/main_content"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+<ListView
+    android:id="@+id/favoritesListView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.stas.dictionary.MainActivity">
+    android:layout_height="match_parent"></ListView>
 
-    <ListView
-        android:id="@+id/favoritesListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        app:layout_anchor="@id/favoritesListView"
+        app:layout_anchorGravity="bottom|right|end"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
