--- a/app/src/main/res/layout/activity_new_set.xml
+++ b/app/src/main/res/layout/activity_new_set.xml
@@ -6,17 +6,33 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tvNewWordsSetName"
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textColor="@color/colorRecent"
-        android:background="@color/colorPrimaryDark"
-        android:text="TextView">
-    </TextView>
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/tvNewWordsSetName"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/colorRecent"
+            android:background="@color/colorPrimaryDark"
+            android:text="TextView">
+        </TextView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:textSize="18sp"
+            android:textColor="@color/colorRecent"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/btnNewSetCreate"
+            />
+    </RelativeLayout>
+
 
     <ListView
         android:background="@drawable/background_with_shadow_white_background"
