--- a/app/src/main/res/layout/activity_new_set.xml
+++ b/app/src/main/res/layout/activity_new_set.xml
@@ -23,6 +23,7 @@
         </TextView>
 
         <Button
+            android:id="@+id/btnNewSetCreate"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
