--- a/app/src/main/res/layout/words_per_day.xml
+++ b/app/src/main/res/layout/words_per_day.xml
@@ -10,14 +10,22 @@
         android:layout_height="wrap_content"
         android:text="tvWord"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="5dp">
+        android:layout_marginStart="15dp">
     </TextView>
     <ImageView
-        android:id="@+id/tvEditImage"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:id="@+id/tvDeleteImage"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_gravity="center_vertical|end"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="50dp"
+        android:src="@android:drawable/ic_delete">
+    </ImageView>
+    <ImageView
+        android:id="@+id/tvEditImage"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center_vertical|end"
+        android:layout_marginEnd="15dp"
         android:src="@android:drawable/ic_menu_edit">
     </ImageView>
 </FrameLayout>
