Добавил кнопки "Да" и "Нет"

--- a/app/src/main/res/layout/tab2recent.xml
+++ b/app/src/main/res/layout/tab2recent.xml
@@ -9,19 +9,30 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="326dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/background_with_shadow_white_background"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
         >
+
+        <TextView
+            android:id="@+id/tvDoYouKnow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/tvDoYouKnow"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -36,6 +47,29 @@
                 android:layout_gravity="center"
                 android:text="TextView" />
         </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|start"
+                android:text="@string/btnNo"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:text="@string/btnYes"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
+                />
+        </FrameLayout>
+
     </LinearLayout>
 
     <TextView
