--- a/app/src/main/res/layout/popup_training.xml
+++ b/app/src/main/res/layout/popup_training.xml
@@ -1,5 +1,5 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lnzPopup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
