Добавил активити для тренировки и поправил стили

--- a/app/src/main/res/layout/tab2training.xml
+++ b/app/src/main/res/layout/tab2training.xml
@@ -8,21 +8,20 @@
     tools:context="com.example.stas.dictionary.MainActivity">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_width="354dp"
+        android:layout_height="314dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/background_with_shadow_white_background"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.243">
+        app:layout_constraintVertical_bias="0.248">
 
         <TextView
             android:id="@+id/tvDoYouKnow"
@@ -42,46 +41,51 @@
             android:background="@drawable/background_with_shadow_blue_background">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvWord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="TextView" />
+                android:text="tvWord" />
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="66dp"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btnYes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|start"
                 android:layout_marginEnd="12dp"
                 android:layout_marginStart="12dp"
+                android:background="@drawable/background_with_shadow_white_background"
                 android:text="@string/btnNo" />
 
             <Button
+                android:id="@+id/btnNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|end"
                 android:layout_marginEnd="12dp"
                 android:layout_marginStart="12dp"
+                android:layout_marginTop="3dp"
+                android:background="@drawable/background_with_shadow_white_background"
                 android:text="@string/btnYes" />
         </FrameLayout>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:clickable="true"
-        android:text="@string/next"
+        android:text="@string/tvNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
