1) Изменил цвет кнопки "Training" 2) Связал два компонента прилоения, добавление слов происходит из вкладки "All"

--- a/app/src/main/res/layout/tab2training.xml
+++ b/app/src/main/res/layout/tab2training.xml
@@ -107,9 +107,10 @@
         android:layout_marginStart="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/btnTraining"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
