--- a/app/src/main/res/layout/activity_word_add.xml
+++ b/app/src/main/res/layout/activity_word_add.xml
@@ -4,17 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.stas.dictionary.Activities.TextSelectionActivity">
+    tools:context="com.example.stas.dictionary.Activities.WordsAddActivity">
 
     <EditText
-        android:id="@+id/inputText1"
+        android:id="@+id/inTransl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="148dp"
         android:ems="10"
+        android:hint="@string/translation"
         android:inputType="textPersonName"
-        android:text="Name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/inWord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="84dp"
+        android:ems="10"
+        android:hint="@string/word"
+        android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,30 +34,30 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="55dp"
-        android:layout_marginTop="76dp"
-        android:text="Add word"
-        app:layout_constraintEnd_toEndOf="@+id/inputText1"
-        app:layout_constraintTop_toBottomOf="@+id/inputText1" />
+        android:layout_marginEnd="68dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/add_word"
+        app:layout_constraintEnd_toEndOf="@+id/inTransl"
+        app:layout_constraintTop_toBottomOf="@+id/inTransl" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="14dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="140dp"
         app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/inputText1" />
+        app:layout_constraintTop_toBottomOf="@+id/inTransl" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/add_new_word"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.054" />
 </android.support.constraint.ConstraintLayout>
